ongoing websocket laravel

--- a/.env
+++ b/.env
@@ -40,9 +40,9 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=1168287
-PUSHER_APP_KEY=9bafe5bad1d751d72ad9
-PUSHER_APP_SECRET=944e5b82796c596552b4
+PUSHER_APP_ID=anyId
+PUSHER_APP_KEY=anyKey
+PUSHER_APP_SECRET=anySecret
 PUSHER_APP_CLUSTER=ap2
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
